samples/_failures_safe/1761185144_a41428_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b39526df.c: In function ‘print_menu’:
./samples/SAFE/__tmp_b39526df.c:152:12: error: missing terminating " character
  152 |     printf("9 - Exit
      |            ^~~~~~~~~
./samples/SAFE/__tmp_b39526df.c:152:5: error: expected expression at end of input
  152 |     printf("9 - Exit
      |     ^~~~~~
./samples/SAFE/__tmp_b39526df.c:152:5: error: expected declaration or statement at end of input
